<resources>
    <string name="app_name">TwoPointThree_Challenge</string>
    <string name="text_box_one">Box One</string>
    <string name="text_box_two">Box Two</string>
    <string name="text_box_three">Box Three</string>
    <string name="text_box_four">Box Four</string>
    <string name="text_box_five">Box Five</string>
    <string name="info_tap_the_screen_and_buttons">Tap the screen and buttons</string>
    <string name="text_how_to_play">How To Play</string>
    <string name="text_blue">Blue</string>
    <string name="text_green">Green</string>
    <string name="text_red">Red</string>
</resources>
