<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraint_layout"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_box_one"
        style="@style/WhiteBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/margin_width"
        android:layout_marginTop="@dimen/margin_width"
        android:layout_marginEnd="@dimen/margin_width"
        android:text="@string/text_box_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_box_two"
        style="@style/WhiteBox"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="@dimen/margin_width"
        android:text="@string/text_box_two"
        app:layout_constraintStart_toStartOf="@+id/tv_box_one"
        app:layout_constraintTop_toBottomOf="@+id/tv_box_one" />

    <TextView
        android:id="@+id/tv_box_three"
        style="@style/WhiteBox"
        android:layout_marginStart="@dimen/margin_width"
        android:layout_marginEnd="@dimen/margin_width"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:text="@string/text_box_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_box_two"
        app:layout_constraintTop_toTopOf="@+id/tv_box_two"
        app:layout_constraintTop_toBottomOf="@+id/tv_box_one"
        app:layout_constraintBottom_toTopOf="@+id/tv_box_four"/>

    <TextView
        android:id="@+id/tv_box_four"
        style="@style/WhiteBox"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/margin_width"
        android:layout_marginStart="@dimen/margin_width"
        android:layout_marginEnd="@dimen/margin_width"
        android:layout_marginBottom="@dimen/margin_width"
        android:layout_height="30dp"
        android:text="@string/text_box_four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_box_two"
        app:layout_constraintTop_toBottomOf="@+id/tv_box_three"
        app:layout_constraintBottom_toTopOf="@+id/tv_box_five"/>

    <TextView
        android:id="@+id/tv_box_five"
        style="@style/WhiteBox"
        android:layout_marginStart="@dimen/margin_width"
        android:layout_marginEnd="@dimen/margin_width"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:text="@string/text_box_five"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_box_two"
        app:layout_constraintBottom_toBottomOf="@+id/tv_box_two"
        app:layout_constraintTop_toBottomOf="@+id/tv_box_four" />

    <TextView
        android:id="@+id/tv_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_width"
        android:text="@string/text_how_to_play"
        android:fontFamily="@font/roboto"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_info_text"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_info_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_width"
        android:text="@string/info_tap_the_screen_and_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_label_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_box_two"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"/>

    <Button
        android:id="@+id/btn_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_green"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_green"
        android:layout_marginEnd="@dimen/margin_width"
        android:text="@string/text_red"/>

    <Button
        android:id="@+id/btn_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_width"
        android:layout_marginEnd="@dimen/margin_width"
        app:layout_constraintTop_toBottomOf="@id/tv_info_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_red"
        app:layout_constraintEnd_toStartOf="@+id/btn_blue"
        app:layout_constraintVertical_bias="1.0"
        android:text="@string/text_green"/>

    <Button
        android:id="@+id/btn_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_blue"
        android:layout_marginStart="@dimen/margin_width"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_green"
        app:layout_constraintStart_toEndOf="@+id/btn_green"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>